<resources>
    <string name="app_name">ssu_contest_eighteen_pomise</string>
    <string name="project_name">약쏙</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="name">이름</string>
    <string name="name_input">이름 입력</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="phone_number_input">휴대폰 번호 입력(숫자만)</string>
    <string name="email">이메일</string>
    <string name="email_input">이메일 입력</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd_input">비밀번호를 입력해주세요</string>
    <string name="pwd_re_input">비밀번호 재입력</string>
    <string name="guardian">보호자</string>
    <string name="patient">환자</string>
    <string name="logout">로그아웃</string>
    <string name="change_pwd">비밀번호 변경</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prescription_add">처방전 추가</string>
    <string name="support_prescription">OCR 지원하는 처방전 양식</string>
    <string name="ocr_camera_on">처방전 사진 찍기\n(자동으로 저장됩니다)</string>
    <string name="ocr_gallery_on">처방전 사진 갤러리에서 찾기</string>
    <string name="no_picture">사진 없이 수기로 처방 작성하기</string>
    <string name="prescription_by_ocr">처방전 내용 확인 및 수정</string>
    <string name="prescription_hand_write">처방 수기로 작성</string>
    <string name="prescription_alarm_add">처방 내용 알람 추가</string>
    <string name="cancel">취소</string>
    <string name="alarm_add">알람 추가</string>
    <string name="pill_eat_time_category">약 복용 시간 등록\n(주의: 0시 0분은 하루의 시작입니다)\n(하나의 카테고리만 선택해주세요)</string>
    <string name="pill_category_and_list_add">약 종류 및 목록 등록</string>
    <string name="periodic_time_standard">주기적인 시간마다</string>
    <string name="morning_lunch_dinner_standard">아침,점심,저녁 기준</string>
    <string name="specific_time_standard">특정 시간에만</string>
    <string name="expiration_date_time_select">약 복용 기한\n(복용 마지막 날을 선택해주세요)</string>
    <string name="expiration_date_edit">날짜수정</string>
    <string name="add_eat_pill_time">복용 시간 추가</string>
    <string name="register_pill_name">약이름을 입력해주세요</string>
    <string name="add_pill">약추가</string>
    <string name="guardians">보호자 목록</string>
    <string name="proteges">환자 관리</string>
    <string name="mealtime">식사시간 설정</string>
    <string name="setAlarm">알람 설정</string>
    <string name="desc1">설정 관리</string>
    <string name="desc2">계정</string>
    <string name="sound">소리</string>
    <string name="vibration">진동</string>
    <string name="update_pwd">비밀번호 변경</string>
    <string name="input_old_pwd">기존 비밀번호</string>
    <string name="input_new_pwd">새 비밀번호</string>
    <string name="input_new_pwd_re">새 비밀번호 재입력</string>
    <string name="colon">:</string>
    <string name="morning">아침식사 시간</string>
    <string name="lunch">점심식사 시간</string>
    <string name="dinner">저녁식사 시간</string>
    <string name="eat_alarm">알림</string>
    <string name="next_eat_alarm">다음 복용 알림</string>
    <string name="forecasted_eat_alarm">예견된 복용 알림</string>
    <string name="eat_time">복용 시간</string>
    <string name="alarm_specific_information">알림 상세 정보</string>
    <string name="edit_value">수정</string>
    <string name="delete_value">삭제</string>
    <string name="add">추가</string>
    <string name="close">닫기</string>
    <string name="confirm">확인</string>
    <string name="add_protege">피보호자 추가</string>
    <string name="add_protege_phoneNum">추가할 환자 전화번호 입력</string>
    <string name="add_protege_email">추가할 환자 이메일 입력</string>
    <string name="registered_pill_list_manage">등록된 약 목록 관리</string>
    <string name="title_for_ask_want_to_finish">정말 복용 등록을 종료할까요?</string>
    <string name="message_for_warning_about_ocr">주의: 해당 처방전의 사진이 없다면 신중히 선택해주세요.</string>
    <string name="empty_register_pill_list">추가할 복용 목록이 없어요.\n추가버튼을 눌러서 복용 목록을 추가해보세요.</string>
    <string name="can_not_load_more_alarm_list_toast_message">더이상 알람 목록이 없습니다.</string>
    <string name="can_not_load_more_registered_pill_list_toast_message">더이상 등록된 약 목록이 없습니다.</string>
    <string name="can_not_load_more_registered_time_list_toast_message">더이상 등록된 시간 목록이 없습니다.</string>
    <string name="title_delete_all_pill_time">주의: 삭제하면 복구할 수 없습니다.</string>
    <string name="message_delete_pill_all_time">\n약을 삭제 하시겠습니까?</string>
    <string name="alarm_list_manage">받은 알림 목록 관리</string>
    <string name="can_not_load_more_receive_alarm_list_toast_message">더이상 받은 알람 목록이 없습니다.</string>
    <string name="pill_category">약 목록: </string>
    <string name="mealtime_description">식사시간을 입력하면, 입력된 식사시간에 맞게 알람이 울립니다.</string>
</resources>