<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.yourssu.design.system.component.TopBar"/>
        <import type="com.yourssu.design.system.foundation.Icon"/>
        <import type="com.yourssu.design.system.atom.ListToggleItem"/>

        <variable
            name="viewModel"
            type="com.example.ssu_contest_eighteen_pomise.myPage.SettingMealtimeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.yourssu.design.system.component.TopBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@{@string/mealtime}"
            app:startIcon="@{Icon.ic_arrow_left_line}"
            onStartIconClick="@{()->viewModel.onClickFinish()}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/morningLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/morning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/morning"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_morning"
                        app:layout_constraintHorizontal_bias="0.6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_morning"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100dp"
                        android:background="@color/white"
                        android:onClick="@{()->viewModel.btnMorningClick()}"
                        android:text="@{}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/morning"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lunchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/morningLayout">

                    <TextView
                        android:id="@+id/lunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lunch"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_lunch"
                        app:layout_constraintHorizontal_bias="0.6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_lunch"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100dp"
                        android:background="@color/white"
                        android:onClick="@{()->viewModel.btnLunchClick()}"
                        android:text="@{}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/lunch"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/dinnerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="130dp"
                    android:layout_below="@+id/lunchLayout">

                    <TextView
                        android:id="@+id/dinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dinner"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_dinner"
                        app:layout_constraintHorizontal_bias="0.6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_dinner"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100dp"
                        android:background="@color/white"
                        android:onClick="@{()->viewModel.btnDinnerClick()}"
                        android:text="@{}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/dinner"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </RelativeLayout>

        </ScrollView>
    </LinearLayout>
</layout>